--- a/frontend/views/page/read.hbs
+++ b/frontend/views/page/read.hbs
@@ -10,10 +10,7 @@
             <div class="row gx-5 justify-content-center">
                 <div class="col-lg-6">
                     <div class="text-center my-5">
-                        <h2 class="display-5 fw-bolder font-weight-lg mb-2 text-invert" id="feed_title">블로그 작성</h2>
-                        <p class="text-invert font-size-sm font-weight-sm"><b id="feed_date"></b> ㆍ author <b id="feed_owner"></b></p>
 
-                        <button type="button" class="btn btn-dark" id="settingButton" data-bs-toggle="modal" data-bs-target="#exampleModal">설정 </button>
 
                     </div>
                 </div>
@@ -26,12 +23,27 @@
     <section class="py-3" id="section_features">
 
         <div class="container px-4 my-5">
+            
             <div class="row gx-5">
 
                 <div class="col-lg-8 mx-auto">
+                    <h2 class="display-5 text-center fw-bolder font-weight-lg mb-2 text-invert" id="feed_title">블로그 작성</h2>
+                    <p class="text-invert text-center font-size-sm font-weight-sm"><b id="feed_date"></b> ㆍ author <b id="feed_owner"></b></p>
 
-                    <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i class="bi bi-collection"></i></div>
-                    <div class="alert alert-dark div-rounded p-4 mb-5">
+
+                    <button type="button" id="settingButton" class="btn btn-red mt-2" data-bs-toggle="modal" data-bs-target="#deletemodal">
+                        게시글 삭제
+                    </button>
+
+                    <dds-modal
+                        modal-id="deletemodal"
+                        modal-title="게시글을 삭제할까요?"
+                        modal-subtitle="삭제하면 되돌릴 수 없어요.">
+                            <dds-modal-button button-color="btn-red" is-dismiss="false" onclick="deleteFeed()">삭제</dds-modal-button>
+                            <dds-modal-button button-color="btn-light" button-text-color="text-dark" is-dismiss="true">취소</dds-modal-button>
+                    </dds-modal>
+
+                    <div class="alert alert-dark div-rounded p-4 mt-5 mb-5">
                         <b class="text-dark-50 font-size-sm font-weight-sm" id="feed_intro">데벤트 기술 블로그</b>
                     </div>
                     <div id="feed_body" class="feed-body">
@@ -64,24 +76,6 @@
         </div>
     </section>
 
-
-<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">설정</h5>
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-      </div>
-      <div class="modal-body">
-          <button class="btn btn-danger" onclick="deleteFeed()">삭제</button>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Save changes</button>
-      </div>
-    </div>
-  </div>
-</div>
 
     {{> footer}}
 
