--- a/frontend/views/user/signup.hbs
+++ b/frontend/views/user/signup.hbs
@@ -8,10 +8,10 @@
       <body class="h-100">
           <div class="container h-100 ">
             <div class="row h-100 ">
-              <div class="col-8 col-lg-5 col-xl-4 mx-auto h-100">
+              <div class="col-10 col-lg-5 col-xl-4 mx-auto h-100">
                 <div class="h-100 flex-row d-flex justify-content-center align-items-center overflow-hidden">
                   <div class="card-body p-4 p-sm-5">
-                    <h5 class="card-title text-center mb-5 fw-light fs-4">새로운 계정을 만듭니다</h5>
+                    <h5 class="card-title text-center mb-5 fw-light fs-4">새로운 계정을 만들어요</h5>
         
                       <div class="form-floating mb-3">
                         <input type="text" oninput="checkId()" class="form-control" id="Username" placeholder="myusername" required autofocus>
