--- a/frontend/views/index.hbs
+++ b/frontend/views/index.hbs
@@ -40,10 +40,15 @@
                 <div class="col-lg-3">
                     <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i class="bi bi-collection"></i></div>
                     <h2 class="h6 fw-bolder">기타 링크</h2>
-                    <p>Paragraph of text beneath the heading to explain the heading. We'll add onto it with another sentence and probably just keep going until we run out of words.</p>
-                    <a class="text-decoration-none" href="#!">
-                        Call to action
-                        <i class="bi bi-arrow-right"></i>
+                    <a class="text-decoration-none" href="https://github.com/Team-DeVent">
+                        Github
+                        <i class="fas fa-arrow-right"></i>
+                    </a>
+                    <br>
+
+                    <a class="text-decoration-none" href="https://devent.kr/">
+                        Homepage
+                        <i class="fas fa-arrow-right"></i>
                     </a>
                 </div>
             </div>
@@ -55,6 +60,8 @@
     {{> footer}}
 
     <script>
+
+
         // Test Ground
         let tag_title = ['세상을', '기술을', '내일을', '우리를', '오늘을', '생각을', '마음을', '지구를']
         let now_title = 0
@@ -97,14 +104,26 @@
 
                     </div>
                     <div class="card-body">
-                        <span class="badge rounded-pill color-blue-100 text-primary mb-3">${item.feed_tag}</span>
+                        <div id="tags_${item.idx}">
+                        </div>
 
                         <h5 class="card-title">${item.feed_title}</h5>
                         <p class="card-text">${item.feed_intro}</p>
                     </div>
-                    </div>`)
+                </div>`)
+                loadTags(item.idx, item.feed_tag.split(','))
             })
         }
+
+        function loadTags(idx, tags) {
+            let body = document.querySelector("#tags_"+String(idx))
+            
+            tags.forEach(function (item) {
+                body.insertAdjacentHTML("beforeend", `<span class="badge rounded-pill color-blue-100 text-primary mb-3 mr-2">${item}</span>`)
+            })
+
+        }
+
 
 
         async function loadMoreFeeds() {
