--- a/frontend/views/page/write.hbs
+++ b/frontend/views/page/write.hbs
@@ -94,37 +94,31 @@
         </div>
     </section>
 
+    <dds-modal
+        modal-id="create_article"
+        modal-title="아티클 생성"
+        modal-subtitle="새로운 아티클을 생성할 수 있어요">
+            <dds-content>
+                <div class="mb-3">
+                    <b>아티클 제목</b>
+                    <textarea class="form-control form-textarea color-gray-100" id="form_article_title" rows="1"></textarea>
+                </div>
 
-    <div class="modal fade" id="create_article" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
-        <div class="modal-content">
-        <div class="modal-header">
-            <h5 class="modal-title" id="exampleModalLabel">아티클 생성</h5>
-            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-        </div>
-        <div class="modal-body">
-                    <div class="mb-3">
-                        <b>아티클 제목</b>
-                        <textarea class="form-control form-textarea color-gray-100" id="form_article_title" rows="1"></textarea>
-                    </div>
+                <div class="mb-3">
+                    <b>아티클 소개</b>
+                    <textarea class="form-control form-textarea color-gray-100" id="form_article_intro" rows="1"></textarea>
+                </div>
 
-                    <div class="mb-3">
-                        <b>아티클 소개</b>
-                        <textarea class="form-control form-textarea color-gray-100" id="form_article_intro" rows="1"></textarea>
-                    </div>
+                <div class="mb-3">
+                    <b>태그</b>
+                    <textarea class="form-control form-textarea color-gray-100" id="form_article_tag" rows="1"></textarea>
+                </div>
+            </dds-content>
+            <dds-modal-button button-color="btn-blue" button-text-color="text-primary" is-dismiss="false" onclick="createArticle()">생성</dds-modal-button>
+            <dds-modal-button button-color="btn-light" button-text-color="text-dark" is-dismiss="true">취소</dds-modal-button>
+    </dds-modal>
 
-                    <div class="mb-3">
-                        <b>태그</b>
-                        <textarea class="form-control form-textarea color-gray-100" id="form_article_tag" rows="1"></textarea>
-                    </div>
-        </div>
-        <div class="modal-footer">
-            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">닫기</button>
-            <button type="button" class="btn btn-primary" onclick="createArticle()">생성</button>
-        </div>
-        </div>
-    </div>
-    </div>
+
  
 
     {{> footer}}
