--- a/frontend/public/css/front.css
+++ b/frontend/public/css/front.css
@@ -22,7 +22,7 @@ h2 {
 
     -webkit-backdrop-filter: saturate(100%) blur(8px);
     backdrop-filter: saturate(100%) blur(8px);
-    padding: 160px 100px !important;
+    padding: 160px 25px !important;
 }
 
 .blur-active-base {
@@ -100,6 +100,10 @@ h2 {
     border: transparent;
 }
 
+.badge {
+    margin-right: 6px !important;
+}
+
 .card {
     box-shadow: none !important;
     border: none !important;
@@ -132,7 +136,7 @@ h2 {
 .card-body {
     padding-right: 0px !important;
     padding-left: 0px !important;
-    padding-top: 40px;
+    padding-top: 30px;
 }
 
 .card-img-top {
@@ -201,6 +205,7 @@ h2 {
 header {
     margin-top: 0px;
     padding-top: 30px !important;
+    background-color: rgba(0, 0, 0, 0.699);
 }
 
 .fa-caret-right {
