--- a/frontend/views/page/read.hbs
+++ b/frontend/views/page/read.hbs
@@ -79,7 +79,7 @@
                 <div class="col-lg-8 mx-auto">
                     <div class="row">
                         <div class="col d-flex flex-row  text-left">
-                            <button class="btn btn-light"><i class="fas fa-comment-alt"></i> 문의하기</button>
+                            <button class="btn btn-light" onclick="window.location = 'mailto:info@devent.kr'"><i class="fas fa-envelope"></i> 문의하기</button>
 
                         </div>
                         <div class="col d-flex flex-row-reverse text-right">
