--- a/frontend/views/user/login.hbs
+++ b/frontend/views/user/login.hbs
@@ -27,11 +27,11 @@
 
       
                     <div class="d-grid mb-2">
-                      <button class="btn btn-lg btn-primary btn-login fw-bold text-uppercase" onclick="userLogin()">로그인</button>
+                      <button class="btn btn-lg btn-primary btn-login fw-bold text-uppercase mb-2" onclick="userLogin()">로그인</button>
+                      <button class="btn btn-lg text-primary fw-bold text-uppercase" onclick="location.href='/auth/signup'">빠른 회원가입</button>
+
                     </div>
-      
-                    <a class="d-block text-left mt-2 small" href="/auth/signup">빠른 회원가입 ></a>
-      
+            
       
                 </div>
               </div>
