--- a/frontend/views/user/signup.hbs
+++ b/frontend/views/user/signup.hbs
@@ -50,9 +50,10 @@
         
                       <div class="d-grid mb-2">
                         <button class="btn btn-lg btn-primary btn-login fw-bold text-uppercase" onclick="userSignup()">회원가입</button>
+                        <button class="btn btn-lg text-primary fw-bold text-uppercase" onclick="location.href='/auth/login'">로그인</button>
+
                       </div>
         
-                      <a class="d-block text-left mt-2 small" href="/auth/login">로그인 ></a>
         
         
                   </div>
